<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
    >

    <include layout="@layout/title_oneicon_back_md"></include>

    <LinearLayout
        android:id="@+id/li_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_72"
        android:layout_marginRight="@dimen/dp_14"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dp_27"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/registacc"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/sp_23"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_27"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_27"
            >


            <com.lottery.bossex.views.ClearEditText
                android:id="@+id/et_login_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableRight="@mipmap/error"
                android:hint="@string/inputyp"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcc"
                android:textSize="@dimen/sp_13"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/dp_27"
            android:layout_marginRight="@dimen/dp_27"
            android:background="@color/linecolor"
            ></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_27"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_27"
            >


            <com.lottery.bossex.views.ClearEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableRight="@mipmap/error"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcc"
                android:textSize="@dimen/sp_13"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/dp_27"
            android:layout_marginRight="@dimen/dp_27"
            android:background="@color/linecolor"
            ></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_27"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_27"
            android:orientation="horizontal"
            >


            <com.lottery.bossex.views.ClearEditText
                android:id="@+id/et_login_code"
                android:layout_width="@dimen/dp_112"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@null"
                android:drawableRight="@mipmap/error"
                android:hint="@string/inputcode"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcc"
                android:textSize="@dimen/sp_13"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />

            <RelativeLayout
                android:id="@+id/rl_obtaincode"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/obtaincode"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/sp_12"/>
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/dp_27"
            android:layout_marginRight="@dimen/dp_27"
            android:background="@color/linecolor"
            ></View>

        <LinearLayout
            android:id="@+id/li_xieyi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_27"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_27"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/img_xieyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/round_true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/readxy"
                android:textColor="@color/text80"
                android:textSize="@dimen/sp_12"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:layout_marginLeft="@dimen/dp_27"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_27"
            android:layout_marginBottom="@dimen/dp_30"
            android:background="@drawable/shap_login"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_13"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>