<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/frend"
        >

        <RelativeLayout
            android:id="@+id/rl_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@mipmap/left_back"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_48"
            android:text="@string/frendtitle"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

        <RelativeLayout
            android:id="@+id/rl_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_14"
                android:background="@mipmap/left_back"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_left"
            android:layout_centerHorizontal="true"
            android:text="@string/frendmsg"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/tv_msg"
            android:layout_marginTop="@dimen/dp_14"
            android:background="@color/white"
            ></View>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/frend_bg"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_34"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frend_lj"
                android:textColor="@color/frend_yel"
                android:textSize="@dimen/sp_13"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:text="22222.00"
            android:textColor="@color/frend_yel"
            android:textSize="@dimen/sp_30"
            />

        <RelativeLayout
            android:layout_width="@dimen/dp_144"
            android:layout_height="@dimen/dp_34"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_19"
            android:background="@drawable/shap_frend_code"
            >

            <TextView
                android:id="@+id/tv_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_14"
                android:text="@string/mycode"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_11"
                />

            <TextView
                android:id="@+id/tv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_3"
                android:layout_toRightOf="@id/tv_c"
                android:text="H7R89U"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/dp_29"
            android:layout_marginTop="@dimen/dp_29"
            android:layout_marginRight="@dimen/dp_29"
            android:background="@color/white"
            ></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_120"
            android:orientation="horizontal"
            >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >


            </RelativeLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="@dimen/dp_77"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                ></View>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>