<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_color"
        ></View>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:background="@color/white"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/tab_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_home"
                    android:layout_width="@dimen/dp_26"
                    android:layout_height="@dimen/dp_26"
                    android:background="@mipmap/home_true"
                    android:clickable="false"/>

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/goucai"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/sp_11"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_center"
                    android:layout_width="@dimen/dp_26"
                    android:layout_height="@dimen/dp_26"
                    android:background="@mipmap/center_false"
                    android:clickable="false"/>

                <TextView
                    android:id="@+id/tv_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/kaijiang"
                    android:textColor="@color/texte5"
                    android:textSize="@dimen/sp_11"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_me"
                    android:layout_width="@dimen/dp_26"
                    android:layout_height="@dimen/dp_26"
                    android:background="@mipmap/me_false"
                    android:clickable="false"/>

                <TextView
                    android:id="@+id/tv_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/me"
                    android:textColor="@color/texte5"
                    android:textSize="@dimen/sp_11"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>